# registro_attivita

./: Activity.cpp  Activity.h  App.cpp  App.h  CMakeLists.txt  Day.cpp  Day.h  Mainframe.cpp  Mainframe.h  Register.cpp  Register.h
testing/: ActivityTest.cpp  CMakeLists.txt  DayTest.cpp  RegisterTest.cpp  RunAllTest.cpp
